acvm-repo/msgpack_tagged/tests/compile_fail/on_unknown_on_non_unit_variant.stderr
error: `#[tagged(on_reserved)]` and `#[tagged(on_unknown)]` mark fallback routing targets — the wrapper discards the wire payload when it routes here, so they're only valid on unit variants
  --> tests/compile_fail/on_unknown_on_non_unit_variant.rs:9:5
   |
9  | /     #[tag(9)]
10 | |     #[tagged(on_unknown)]
11 | |     NotUnit { x: u32 },
   | |______________________^
